--- a/cluster/kubernetes/charts/templates/configuration/config-overrides.yaml
+++ b/cluster/kubernetes/charts/templates/configuration/config-overrides.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ template "fullname" . }}-auth-overrides"
+  name: "{{ template "fullname" . }}-config-overrides"
   labels:
 {{ include "default-labels" . | indent 4 }}
     component: configuration
 data:
-{{ toYaml .Values.authOverrides | indent 2 }}
+{{ toYaml .Values.configuration | indent 2 }}
