--- a/cluster/kubernetes/charts/templates/index-node/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/index-node/deployment.yaml
@@ -21,9 +21,27 @@ spec:
       annotations:
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
-        checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
+        checksum/config-overrides: {{ include (print $.Template.BasePath "/configuration/config-overrides.yaml") . | sha256sum }}
     spec:
       initContainers:
+        # Unpack the required config overrides from the base64-encoded tarballs in the configmap
+        # This process is required because configmaps cannot contain nested directory structures
+        - name: unpack-config-overrides
+          image: busybox
+          command:
+            - "sh"
+            - "-c"
+            - |
+              set -eo pipefail
+              if [ -f /esg/tarballs/esg-config-overrides.tar.gz.b64 ]; then
+                  base64 -d /esg/tarballs/esg-config-overrides.tar.gz.b64 | tar -xz -C /esg/config
+              fi
+          volumeMounts:
+            - mountPath: /esg/config
+              name: esg-config-overrides
+            - mountPath: /esg/tarballs
+              name: override-tarballs
+              readOnly: true
         # Make sure Solr is up before starting
         - name: ensure-solr-slave
           image: radial/busyboxplus:curl
@@ -62,7 +80,7 @@ spec:
                 name: "{{ template "fullname" . }}-environment-common"
           env:
             - name: ESGF_SOLR_SHARDS
-              value: "{{ template "fullname" . }}-solr-slave:8983/solr"
+              value: "{{ template "fullname" . }}-solr-slave:8983/solr{{ range .Values.solr.shards.shardList }},{{ template "fullname" $ }}-solr-{{ .name }}:8983/solr{{ end }}"
           volumeMounts:
             - mountPath: /esg/certificates/esg-trust-bundle.pem
               name: trust-bundle
@@ -78,5 +96,7 @@ spec:
           configMap:
             name: "{{ template "fullname" . }}-trust-bundle"
         - name: esg-config-overrides
+          emptyDir: {}
+        - name: override-tarballs
           configMap:
-            name: "{{ template "fullname" . }}-esg-config-overrides"
+            name: "{{ template "fullname" . }}-config-overrides"
