--- a/cluster/kubernetes/charts/templates/tds/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/tds/deployment.yaml
@@ -22,9 +22,32 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/configuration/secrets.yaml") . | sha256sum }}
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
-        checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
-        checksum/thredds-overrides: {{ include (print $.Template.BasePath "/configuration/thredds-overrides.yaml") . | sha256sum }}
+        checksum/config-overrides: {{ include (print $.Template.BasePath "/configuration/config-overrides.yaml") . | sha256sum }}
     spec:
+      initContainers:
+        # Unpack the required config overrides from the base64-encoded tarballs in the configmap
+        # This process is required because configmaps cannot contain nested directory structures
+        - name: unpack-config-overrides
+          image: busybox
+          command:
+            - "sh"
+            - "-c"
+            - |
+              set -eo pipefail
+              if [ -f /esg/tarballs/esg-config-overrides.tar.gz.b64 ]; then
+                  base64 -d /esg/tarballs/esg-config-overrides.tar.gz.b64 | tar -xz -C /esg/config
+              fi
+              if [ -f /esg/tarballs/thredds-overrides.tar.gz.b64 ]; then
+                  base64 -d /esg/tarballs/thredds-overrides.tar.gz.b64 | tar -xz -C /esg/thredds
+              fi
+          volumeMounts:
+            - mountPath: /esg/config
+              name: esg-config-overrides
+            - mountPath: /esg/thredds
+              name: thredds-overrides
+            - mountPath: /esg/tarballs
+              name: override-tarballs
+              readOnly: true
       containers:
         - name: tds
           image: "{{ .Values.tds.image.repository }}:{{ .Values.tds.image.tag }}"
@@ -96,8 +119,9 @@ spec:
           configMap:
             name: "{{ template "fullname" . }}-trust-bundle"
         - name: esg-config-overrides
-          configMap:
-            name: "{{ template "fullname" . }}-esg-config-overrides"
+          emptyDir: {}
         - name: thredds-overrides
+          emptyDir: {}
+        - name: override-tarballs
           configMap:
-            name: "{{ template "fullname" . }}-thredds-overrides"
+            name: "{{ template "fullname" . }}-config-overrides"
